# binstatcuda

./: .gitignore  AGENTS.md  CMakeLists.txt  Readme.md  benchmark.py  pyproject.toml  setup.cfg  setup.py
demo/: benchmark.py  demo.html  demo.ipynb
include/binstatcuda/: device_info.cuh  histogram.cuh
src/cpp/: bindings.cpp
src/cuda/: device_info.cu  histogram.cu
src/python/binstatcuda/: __init__.py
tests/python/: test_device.py  test_histogram.py
