[metadata]
name = binstatcuda
version = 0.1.0
description = CUDA-accelerated binned statistics routines.
long_description = file: Readme.md
long_description_content_type = text/markdown
author = Yushi Yang
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src/python
zip_safe = False
include_package_data = False
install_requires =
    numpy>=1.21

[options.packages.find]
where = src/python

[tool:pytest]
addopts = -ra
testpaths = tests/python
